# eventstore_client

./: .gitignore  .gitmodules  Makefile  docker-compose.yaml  dune-project  eventstore_client.opam
eventstore-config/: dune  eventstore_config.ml  req_auth.ml  setup_logs.ml
eventstore-grpc/: content_coding.ml  content_type.ml  dune  eventstore_grpc.ml  grpc_status.ml  req.ml  status.ml  timeout.ml  timeout.mli
eventstore-http/: dune  elections.ml  gossip.ml  info.ml  ping.ml  req.ml  stats.ml
eventstore-types/: dune  eventstore_types.ml  srv_cluster_elections.ml  srv_cluster_gossip.ml  srv_gossip.ml  srv_monitoring.ml  srv_operations.ml  srv_persistent_subscriptions.ml  srv_projections.ml  srv_server_features.ml  srv_streams.ml  srv_user.ml  srv_users.ml
lib/: dune
other-clients/es_elixir/: .gitignore  README.md  docker-compose.yml  mix.exs
other-clients/es_elixir/lib/: es_elixir.ex
other-clients/es_elixir/lib/es_elixir/: application.ex
other-clients/es_elixir/test/: es_elixir_test.exs
test/: dune
test/evenstore-types/: dune  exists_test.ml
test/int-evenstore-grpc/: dune  int_eventstore_grpc_test.ml  monitoring.ml  users.ml
types/: dune  eventstore_client.ml
types_test/: dune  types_test.ml
